# nld

./: .envrc  .gitignore  README.md  channel.hy  entropy.hy  numerics.hy  plot.hy  pyproject.toml  requirements.txt  setup.cfg  shell.nix  systems.hy
nld/: __init__.py  channel.hy  entropy.hy  numerics.hy  plot.hy  systems.hy
