[build-system]
requires = [
  "setuptools >= 61.0",
  "wheel",
  "setuptools_scm[toml]>=6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "nld"
dynamic = ["version"]
description = "GPU-accelerated nonlinear dynamics library"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Project Contributors", email = "info@example.com"},
]
dependencies = [
    "hy>=0.25.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/username/nld"
Issues = "https://github.com/username/nld/issues"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["nld"]
