[build-system]
requires = [
  "setuptools >= 61.0",
  "wheel",
  "setuptools_scm[toml]>=6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "nld"
dynamic = ["version"]
description = "GPU-accelerated (jax) nonlinear dynamics library"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Ati Sharma", email = "ati+nld@agalmic.ltd"},
]
dependencies = [
    "hy>=1.0.0",
    "hyrule",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy",
    "matplotlib",
    "zstandard"
]

[project.urls]
Homepage = "https://github.com/atisharma/nld"
Issues = "https://github.com/atisharma/nld/issues"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["nld"]
