[metadata]
name = nld
description = Integrate nonlinear dynamical systems on the GPU and calculate their information dimension
url = https://github.com/atisharma/nld
author = Ati Sharma
author_email = ati.sharma+nld@diplomail.ch
keywords = nonlinear dynamics, jax, entropy
license = GPL-3
license_file = LICENSE
long_description = file: README.md


[options]
python_requires = >= 3.9
install_requires = file: requirements.txt
include_package_data = True
package_dir = 
packages = find:

[options.packages.find]
where = 

[options.package_data]
* = *.hy
